--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<header>
+    <img class="logo-firstname" src="../../../assets/img/firstname.png" alt="">
+
+    <div>
+        <a class="mobile-hidden" href="#">About me</a>
+        <a class="mobile-hidden" href="#">Skills</a>
+        <a class="mobile-hidden" href="#">Portfolio</a>
+        <img class="desktop-hidden menu" src="../../../assets/img/icons/burgermenu.png" alt="">
+    </div>
+</header>
