--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,1 +1,7 @@
-<p>main-content works!</p>
+<app-header></app-header>
+<app-landing></app-landing>
+<app-about-me></app-about-me>
+<app-skills></app-skills>
+<app-portfolio></app-portfolio>
+<app-contact></app-contact>
+<app-footer></app-footer>
