landing component implemented

--- a/src/app/main-content/landing/landing.component.html
+++ b/src/app/main-content/landing/landing.component.html
@@ -1,1 +1,39 @@
-<p>landing works!</p>
+<section>
+    <div>
+        <img class="shadow" src="../../../assets/img/shadow1.png" alt="">
+        <img class="portrait" src="../../../assets/img/portrait1.png" alt="">
+    </div>
+    <div class="text-container">
+        <div class="headline">
+            <span>I am</span>
+            <div class="main-headline">
+                <h1>Tobias Termer</h1>
+                <h2>Fullstack Developer</h2>
+            </div>
+        </div>
+        <button class="btn btn-primary">Contact me</button>
+    </div>
+    <img class="bow" src="../../../assets/img/bow.png" alt="">
+    <div class="social-container">
+        <div class="vertical-lign"></div>
+        <div class="social-icons">
+            <a href="https://github.com/tobiastermer" target="_blank">
+                <img class="icon" src="../../../assets/img/icons/github.png" alt="">
+            </a>
+            <a href="https://www.linkedin.com/in/tobias-termer-778328143/" target="_blank">
+                <img class="icon" src="../../../assets/img/icons/linkedin.png" alt="">
+            </a>
+            <a href="mailto:tobiastermer@gmx.de" target="_blank">
+                <img class="icon" src="../../../assets/img/icons/email.png" alt="">
+            </a>
+            <a href="mailto:tobiastermer@gmx.de" target="_blank">
+                tobiastermer(at)gmx.de
+            </a>
+        </div>
+    </div>
+    <div class="scroll-down-container">
+        <p class="scroll-down-text">Scroll down</p>
+        <img class="scroll-down-icon" src="../../../assets/img/icons/arrow-right-line.png" alt="">
+    </div>
+
+</section>
