about me section

--- a/src/app/main-content/landing/landing.component.html
+++ b/src/app/main-content/landing/landing.component.html
@@ -8,14 +8,14 @@
             <span>I am</span>
             <div class="main-headline">
                 <h1>Tobias Termer</h1>
-                <h2>Fullstack Developer</h2>
+                <h3>Fullstack Developer</h3>
             </div>
         </div>
         <button class="btn btn-primary">Contact me</button>
     </div>
     <img class="bow" src="../../../assets/img/bow.png" alt="">
     <div class="social-container">
-        <div class="vertical-lign"></div>
+        <div class="horicontal-lign"></div>
         <div class="social-icons">
             <a href="https://github.com/tobiastermer" target="_blank">
                 <img class="icon" src="../../../assets/img/icons/github.png" alt="">
@@ -26,7 +26,7 @@
             <a href="mailto:tobiastermer@gmx.de" target="_blank">
                 <img class="icon" src="../../../assets/img/icons/email.png" alt="">
             </a>
-            <a href="mailto:tobiastermer@gmx.de" target="_blank">
+            <a href="mailto:tobiastermer@gmx.de" class="mobile-hidden" target="_blank">
                 tobiastermer(at)gmx.de
             </a>
         </div>
