--- a/src/app/main-content/landing/landing.component.scss
+++ b/src/app/main-content/landing/landing.component.scss
@@ -76,7 +76,7 @@ section {
                 line-height: 1;
             }
 
-            h2 {
+            h3 {
                 font-size: 58px;
                 font-weight: 400;
                 margin-block-start: 0;
@@ -116,7 +116,7 @@ section {
     }
 }
 
-.vertical-lign {
+.horicontal-lign {
     width: $padding_side;
     height: 4px;
     border: 0;
