--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,9 +1,25 @@
 <header>
     <img class="logo-firstname" src="../../../assets/img/firstname.png" alt="">
-    <div>
-        <a class="mobile-hidden" href="#">About me</a>
-        <a class="mobile-hidden" href="#">Skills</a>
-        <a class="mobile-hidden" href="#">Portfolio</a>
-        <img class="desktop-hidden menu" src="../../../assets/img/icons/burgermenu.png" alt="">
-    </div>
+    <nav>
+        <div class="language-container mobile-hidden">
+            <a class="language-link" href="">DE</a>
+            <div class="vertical-lign"></div>
+            <a class="language-link" href="">EN</a>
+        </div>
+        <div class="nav-container">
+            <div class="nav-child mobile-hidden">
+                <a class="nav-link" href="#">About me</a>
+                <div class="underline"></div>
+            </div>
+            <div class="nav-child mobile-hidden">
+                <a class="nav-link" href="#">Skills</a>
+                <div class="underline"></div>
+            </div>
+            <div class="nav-child mobile-hidden">
+                <a class="nav-link" href="#">Portfolio</a>
+                <div class="underline"></div>
+            </div>
+            <img class="desktop-hidden menu" src="../../../assets/img/icons/burgermenu.png" alt="">
+        </div>
+    </nav>
 </header>
