--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,1 +1,37 @@
-<p>about-me works!</p>
+<section>
+
+    <div class="about-me-content-container">
+        <h2>About me</h2>
+        <div class="about-me-content">
+            <div class="content-child">
+                <p class="content-text aligned-left">Hi, I am a Front-end deverloper based in München,
+                    Germany(....)Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut auctor sem non tempus
+                    convallis. Integer et justo vitae urna finibus eleifend sit amet porttitor sapien. Donec
+                    sollicitudin massa vel lorem vestibulum efficitur. </p>
+            </div>
+            <div class="content-child">
+                <div class="icon-container">
+                    <img class="icon" src="../../../assets/img/icons/lightbulb.png" alt="">
+                </div>
+                <p class="content-text left aligned-left">Some personal thing to share(...) Donec ut imperdiet diam, et
+                    convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                    himenaeos. </p>
+            </div>
+            <div class="content-child">
+                <div class="icon-container">
+                    <img class="icon" src="../../../assets/img/icons/puzzle.png" alt="">
+                </div>
+                <p class="content-text aligned-left">Some personal thing to share(...) Donec ut imperdiet diam, et
+                    convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                    himenaeos. </p>
+            </div>
+        </div>
+    </div>
+    <div class="about-me-image-container">
+        <img class="portrait" src="../../../assets/img/portrait2.png" alt="">
+        <img class="shadow" src="../../../assets/img/shadow2.png" alt="">
+        <div class="horicontal-lign"></div>
+    </div>
+
+
+</section>
