--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ body {
 }
 
 $dark_blue: #141D2F;
+$dark_blue_sec: #151E30;
 $blue: #4B47FF;
 $light_blue: #00BEE8;
 
@@ -65,6 +66,14 @@ $padding_side: 100px;
     /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
+h2 {
+    font-size: 90px;
+    font-weight: bold;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    color: white;
+}
+
 .btn {
     padding: 15px 30px 15px 30px;
     border-radius: 10px;
@@ -90,9 +99,25 @@ $padding_side: 100px;
     }
 }
 
-.btn-project {}
+.btn-project {
+    background-color: $light_blue;
+}
 
-.btn-git {}
+.btn-git {
+    background-color: $light_blue;
+
+}
+
+.content-text{
+    font-size: 16px;
+    color: white;
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+.aligned-left{
+    text-align: left;
+}
 
 
 
@@ -104,6 +129,6 @@ $padding_side: 100px;
 
 @media (max-width: 800px) {
     .mobile-hidden {
-        display: none;
+        display: none !important;
     }
 }
