portfolio projects integrated, shadows implemeneted

--- a/src/app/main-content/portfolio/portfolio.component.html
+++ b/src/app/main-content/portfolio/portfolio.component.html
@@ -16,6 +16,10 @@
             [languages]="project.languages" [description]="project.description" [linkLive]="project.linkLive"
             [linkGit]="project.linkGit" [picture]="project.picture" [index]="i">
         </app-project>
+
+        <img class="shadow shadow1" src="../../../assets/img/shadow4.png" alt="">
+        <img class="shadow shadow2" src="../../../assets/img/shadow5.png" alt="">
+
     </div>
 
 </section>
