--- a/src/app/main-content/portfolio/project/project.component.scss
+++ b/src/app/main-content/portfolio/project/project.component.scss
@@ -10,6 +10,10 @@
         order: 1;
     }
 
+    .jc-flexend {
+        justify-content: flex-end;
+    }
+
     .project-content {
         display: flex;
         flex-direction: column;
