contact formular designed

--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -1,1 +1,31 @@
-<p>contact works!</p>
+<section>
+
+    <div class="contact-headline-container">
+        <div class="horicontal-lign"></div>
+        <h2>Contact</h2>
+    </div>
+
+    <div class="contact-content-container">
+        <div class="contact-content-text">
+            <h3>Got a problem to solve?</h3>
+            <p class="content-text aligned-left">Contact me through this form, I am interested in hearing you, knowing
+                your ideas and contributing to your projects with my work.
+            </p>
+            <p class="content-text aligned-left">Need a Fullstack developer? <b>Contact me!</b>
+            </p>
+        </div>
+        <form (submit)="sendMail()" #form ngNativeValidate>
+            <input type="text" required placeholder="Your name" name="name" #formName>
+            <input type="text" required placeholder="Your email" name="email" #formEmail>
+            <textarea name="" id="" cols="30" rows="10" required laceholder="Your message" name="message" #formMessage></textarea>
+            <div class="form-privacy-check">
+                <input type="checkbox" required>
+                <p>I've read the <a href="#">privacy policy</a> and agree to the processing of my data as outlined.</p>
+            </div>
+            <button class="btn btn-primary" #formButton>Send message</button>
+        </form>
+    </div>
+
+    <img class="shadow shadow1" src="../../../assets/img/shadow4.png" alt="">
+
+</section>
