--- a/src/app/main-content/landing/landing.component.html
+++ b/src/app/main-content/landing/landing.component.html
@@ -23,11 +23,11 @@
             <a href="https://www.linkedin.com/in/tobias-termer-778328143/" target="_blank">
                 <img class="icon" src="../../../assets/img/icons/linkedin.png" alt="">
             </a>
-            <a href="mailto:tobiastermer@gmx.de" target="_blank">
+            <a href="mailto:mail@tobias-termer.de" target="_blank">
                 <img class="icon" src="../../../assets/img/icons/email.png" alt="">
             </a>
-            <a href="mailto:tobiastermer@gmx.de" class="mobile-hidden" target="_blank">
-                tobiastermer(at)gmx.de
+            <a href="mailto:mail@tobias-termer.de" class="mobile-hidden" target="_blank">
+                mail(at)tobias-termer.de
             </a>
         </div>
     </div>
