--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,21 @@
-<p>footer works!</p>
+<footer>
+    <div class="footer-row">
+        <img class="logo-firstname" src="../../../assets/img/firstname.png" alt="">
+        <p>© Tobias Termer 2024</p>
+        <div class="social-container">
+            <div class="social-icons">
+                <a href="https://github.com/tobiastermer" target="_blank">
+                    <img class="icon" src="../../../assets/img/icons/github.png" alt="">
+                </a>
+                <a href="https://www.linkedin.com/in/tobias-termer-778328143/" target="_blank">
+                    <img class="icon" src="../../../assets/img/icons/linkedin.png" alt="">
+                </a>
+                <a href="mailto:mail@tobias-termer.de" target="_blank">
+                    <img class="icon" src="../../../assets/img/icons/email.png" alt="">
+                </a>
+            </div>
+        </div>
+    </div>
+    <a href="/impressum">Impressum</a>
+
+</footer>
