--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -8,6 +8,7 @@ section {
     padding: 100px $padding_side 100px 0;
     // height: calc(100vh - 135px);
     overflow: hidden;
+    position: relative;
 }
 
 .contact-headline-container {
@@ -21,7 +22,7 @@ section {
         min-width: 50px;
         margin-top: 65px;
     }
-    
+
 }
 
 .contact-headline-content {
@@ -42,7 +43,7 @@ section {
         flex-direction: column;
         gap: 35px;
 
-        h3{
+        h3 {
             color: white;
             font-size: 32px;
             font-weight: bold;
@@ -59,7 +60,12 @@ section {
         gap: 32px;
         min-width: 50%;
 
-        input, textarea {
+        .input-container {
+            width: calc(100% - 100px); // minus padding input fielt
+        }
+
+        input,
+        textarea {
             width: 100%;
             padding: 15px 25px 15px 25px;
             border-radius: 10px;
@@ -79,6 +85,18 @@ section {
             min-height: 60px;
         }
 
+        .default-border {
+            border: 1px solid $blue;
+        }
+        
+        input.ng-invalid.ng-dirty, textarea.ng-invalid.ng-dirty {
+            border: 1px solid red;
+        }
+        
+        input.ng-valid, textarea.ng-valid {
+            border: 1px solid green;
+        }
+
         .form-privacy-check {
             display: flex;
             align-items: center;
@@ -89,9 +107,8 @@ section {
             text-align: left;
 
             [type="checkbox"] {
-                width:unset;
+                width: unset;
                 padding: 0;
-                margin-left: -25px;
                 border: 1px solid $light_blue;
             }
 
@@ -101,25 +118,42 @@ section {
                 font-size: 14px;
             }
 
-            a{
+            a {
                 text-decoration: none;
                 color: $blue;
                 font-size: 14px;
+
                 &:hover {
                     color: $light_blue;
                 }
             }
         }
+
+        button:disabled {
+            background-color: gray;
+            // Fügen Sie hier weitere Stile hinzu, um den Button im deaktivierten Zustand anzupassen
+        }
+
+        .error-message {
+            color: red;
+            font-size: 14px;
+            // Weitere Stile für die Fehlermeldung
+        }
+
+        .success-message {
+            color: green;
+            // Weitere Stile für die Erfolgsmeldung
+        }
+
     }
 
-    
-}
 
+}
 
 
 .shadow {
     position: absolute;
     z-index: -1;
-    left: -500px;
-    top: 600px;
+    left: -400px;
+    top: 250px;
 }
