--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,7 +90,8 @@ h2 {
     border: 0;
     transition: all 275ms ease-in-out;
     text-decoration: none;
-
+    white-space: nowrap;
+    
     &:hover {
         cursor: pointer;
     }
