--- a/src/app/main-content/landing/landing.component.html
+++ b/src/app/main-content/landing/landing.component.html
@@ -31,7 +31,7 @@
             </a>
         </div>
     </div>
-    <div class="scroll-down-container">
+    <div class="scroll-down-container mobile-hidden">
         <p class="scroll-down-text">Scroll down</p>
         <img class="scroll-down-icon" src="../../../assets/img/icons/arrow-right-line.png" alt="">
     </div>
