--- a/src/app/main-content/landing/landing.component.scss
+++ b/src/app/main-content/landing/landing.component.scss
@@ -5,6 +5,7 @@ section {
     justify-content: space-between;
     padding: 0 $padding_side 0 $padding_side;
     height: calc(100vh - 135px);
+    overflow-x: hidden;
 }
 
 .shadow {
@@ -12,18 +13,20 @@ section {
     bottom: 200px;
     left: 0;
     position: absolute;
+    z-index: -1;
 }
 
 .portrait {
-    height: 600px;
+    height: calc(100vh - 200px);
     position: absolute;
-    bottom: 180px;
+    top: 100px;
     z-index: 5;
 }
 
 .bow {
     width: 100vw;
-    height: 500px;
+    height: 50vh;
+    min-height: 300px;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -145,4 +148,56 @@ section {
     .scroll-down-icon {
         height: 20px;
     }
+}
+
+@media (max-width: 1280px) {
+
+    .portrait {
+
+        width: calc(100% - $padding_side_double);
+        min-width: 300px;
+        height: auto;
+        vertical-align: middle;
+    }
+}
+
+
+@media (max-width: 900px) {
+
+    .portrait {
+        width: calc(100% - $padding_side_double);
+        height: auto;
+        
+    }
+
+    .text-container {
+    
+        .headline {
+    
+            span {
+                text-wrap: nowrap;
+                font-size: 32px;
+                white-space: nowrap;
+            }
+    
+            .main-headline {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                white-space: nowrap;
+    
+    
+                h1 {
+                    font-size: 45px;
+                    line-height: 1;
+                }
+    
+                h3 {
+                    font-size: 29px;
+                    line-height: 1;
+                }
+            }
+        }
+    }
+
 }
