--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -28,9 +28,9 @@
         </div>
     </div>
     <div class="about-me-image-container">
-        <img class="portrait" src="../../../assets/img/portrait2.png" alt="">
+        <img class="portrait mobile-hidden" src="../../../assets/img/portrait2.png" alt="">
         <img class="shadow" src="../../../assets/img/shadow2.png" alt="">
-        <div class="horicontal-lign"></div>
+        <div class="horicontal-lign mobile-hidden"></div>
     </div>
 
 
