--- a/src/app/main-content/portfolio/portfolio.component.scss
+++ b/src/app/main-content/portfolio/portfolio.component.scss
@@ -30,6 +30,7 @@ section {
     display: flex;
     flex-direction: column;
     position: relative;
+    gap: 200px;
 
     .shadow {
         position: absolute;
