--- a/src/app/main-content/portfolio/project/project.component.scss
+++ b/src/app/main-content/portfolio/project/project.component.scss
@@ -14,6 +14,12 @@
         justify-content: flex-end;
     }
 
+    .project-image {
+        width: 600px;
+        height: auto;
+        object-fit: cover;
+    }
+
     .project-content {
         display: flex;
         flex-direction: column;
@@ -52,4 +58,42 @@
 
     }
 
+}
+
+@media (max-width: 1280px) {
+
+    .project-container {
+
+        
+        .project-image {
+            width: 400px;
+        }
+    }
+}
+
+@media (max-width: 1080px) {
+
+    .project-container {
+        flex-direction: column;
+        gap: 60px;
+
+        .reverse-order {
+            order: unset;
+        }
+
+        .project-image {
+            width: 100%;
+            height: 80%;
+        }
+
+        .project-content {
+            align-items: center;
+
+            .text-content-container {
+                align-items: center;
+                max-width: 500px;
+                text-align: center;
+            }
+        }
+    }
 }
