--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -17,6 +17,8 @@ footer {
             font-size: 23px;
             margin-block-start: 0;
             margin-block-end: 0;
+            white-space: nowrap;
+
         }
     }
 
@@ -27,18 +29,18 @@ footer {
         bottom: 40px;
         left: 0;
         z-index: 10;
-    
+
         .social-icons {
             display: flex;
             align-items: center;
             gap: 42px;
-    
+
             .icon {
                 height: 40px;
                 width: 40px;
             }
-    
-            
+
+
         }
     }
 
@@ -46,6 +48,7 @@ footer {
         color: white;
         text-decoration: none;
         font-size: 16px;
+
         &:hover {
             cursor: pointer;
         }
@@ -54,9 +57,24 @@ footer {
     .logo-firstname {
         width: 216px;
         height: auto;
-    
-        &:hover {
-            cursor: pointer;
-        }
     }
 }
+
+@media (max-width: 1000px) {
+
+    footer {
+        align-items: center;
+        gap: 32px;
+
+        .footer-row {
+            flex-direction: column;
+            align-items: center;
+            gap: 35px;
+
+            .logo-firstname{
+                margin-bottom: 24px;
+            }
+        }
+    }
+
+}    
